# qc_lab

./: README.rst  pyproject.toml  setup.py
.github/workflows/: ci.yml  docs.yml  install_pypi.yml  install_source.yml  install_testpypi.yml  publish-pypi.yml  publish-testpypi.yml  publish_testpypi.yml  pylint.yml
docs/: conf.py  index.rst
docs/developer_guide/model_dev/: model_dev.rst
docs/interactive_docs/spin-boson-example/: change-coupling.rst  modify-fssh.rst
docs/nested_docs/: basic_spin_boson.py  index.rst  spin-boson.rst
docs/software_reference/ingredients/: ingredients.rst
docs/user_guide/: algorithm_dev.rst  data_object.rst  defaults.rst  index.rst  model_dev.rst  simulation.rst  task.rst
docs/user_guide/algorithms/: algorithms.rst  fssh_algorithm.rst  (+1 more)
examples/: docs_example.ipynb  docs_examples.ipynb  fmo_complex_examples.ipynb  holstein_lattice_examples.ipynb  interactive_docs_example.ipynb  spin_boson_examples.ipynb  tully_problems_examples.ipynb  use_case_examples.ipynb
examples/mpi_examples/: mpi_example.py
qc_lab/: algorithm.py  data.py  ingredients.py  model.py  simulation.py  tasks.py
qc_lab/algorithms/: fewest_switches_surface_hopping.py  mean_field.py
qc_lab/cython/: c_utils.c
qc_lab/dynamics/: dynamics.py  parallel_driver_mpi.py  parallel_driver_multiprocessing.py  serial_driver.py
qc_lab/models/: fmo_complex.py  holstein_lattice.py  spin_boson.py
src/qc_lab/: data.py  ingredients.py
src/qclab/: numerical_constants.py
src/qclab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_drivers.py  test_mpi.py
(+11 files in other folders)
