[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qc_lab"
version = "0.1.0a1"
description = "QC Lab: a python package for quantum-classical modeling."
readme = "README.md"
authors = [
    { name = "Tempelaar Group", email = "roel.tempelaar@northwestern.edu" }
]
license = { text = "Apache License 2.0" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Linux :: Linux",
    "License :: Apache License 2.0"
]
keywords = [
    "surface hopping", "mixed quantum-classical dynamics",
    "theoretical chemistry", "ehrenfest", "python", "quantum-classical"
]
dependencies = [
    "numpy>=1.22,<2.1",
    "tqdm",
    "h5py",
    "numba",
    "matplotlib"
]